<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btAboutTwitter"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:background="@drawable/twitter_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/tvAboutDev"
        android:layout_width="167dp"
        android:layout_height="33dp"
        android:layout_gravity="center"
        android:gravity="center|center_horizontal"
        android:text="@string/dev"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <ImageView
        android:id="@+id/ivMyPhoto"
        android:layout_width="88dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@drawable/myphotoabout" />

    <TextView
        android:id="@+id/tvAboutNombre"
        android:layout_width="153dp"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/nombre"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="338dp"
        android:layout_height="29dp"
        android:text="@string/mensajedev"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/nombre_contact"
        android:textColorHint="@color/eurogamer"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiettAboutEnviarNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/asunto"
        android:textColorHint="@color/eurogamer"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAboutAsunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="25" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="239dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/mensaje"
        android:textColorHint="@color/eurogamer"
        app:counterEnabled="true"
        app:counterMaxLength="1000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAboutMensaje"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:gravity="top|left"
            android:hint=""
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLength="1000"
            android:maxLines="5"
            android:minLines="3"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btAboutEnviar"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/click_effect_enviar"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/enviar"
        android:textColor="@color/whitebox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>