<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.juegos.detalles.JuegosDetalleFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAgregarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="31dp"

        android:clickable="true"

        android:src="@drawable/ic_camera_alt_black_24dp"
        app:backgroundTint="#333333"
        app:rippleColor="@color/btRefresh" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="243dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="#6F000000"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivJuegoDetalle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_no_image" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:background="#00FFFFFF"
                    android:gravity="bottom"
                    android:hint="@string/titulo"
                    android:textColorHint="@color/btRefresh">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTituloJuego"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="5dp"
                        android:background="@null"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:maxLength="1000"
                        android:maxLines="5"
                        android:minLines="3"
                        android:scrollbars="vertical" />


                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:hint="@string/precio"
                        android:textColorHint="@color/btRefresh">

                        <EditText
                            android:id="@+id/etPrecioJuego"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:ems="10"
                            android:inputType="numberDecimal"
                            android:maxLength="6"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:hint="@string/fecha_de_lanzamiento"
                        android:textColorHint="@color/btRefresh">

                        <EditText
                            android:id="@+id/etReleaseDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:clickable="true"
                            android:ems="10"
                            android:focusable="false"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPlatform"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/plataforma"
                    android:textColor="@color/eurogamer"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/click_effect"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spPlataformaJuego"
                        android:layout_width="187dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:hint="@string/sinopsis"
                android:textColorHint="@color/eurogamer"
                app:counterEnabled="true"
                app:counterMaxLength="1000"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <EditText
                    android:id="@+id/etSinopsisJuego"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLength="1000"
                    android:maxLines="5"


                    android:minLines="3"
                    android:scrollbars="vertical" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</RelativeLayout>